// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Find test snapshot test id찾기일때 1`] = `
<div>
  <div
    className="container"
  >
    <div
      className="card"
    >
      <div
        className="header blue white-text center"
      >
        <div
          className="card-content"
        >
          <i
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            아이디찾기
          </i>
          /
          <i
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            비밀번호찾기
          </i>
        </div>
      </div>
      <FindId
        sendEmail={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Find test snapshot test 비밀번호 찾기일때 1`] = `
<div>
  <div
    className="container"
  >
    <div
      className="card"
    >
      <div
        className="header blue white-text center"
      >
        <div
          className="card-content"
        >
          <i
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            아이디찾기
          </i>
          /
          <i
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            비밀번호찾기
          </i>
        </div>
      </div>
      <FindPwd
        sendEmail={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Find test snapshot test 아이디를 찾아서 아이디가 나타나면 1`] = `
<div>
  <div
    className="container"
  >
    <div
      className="card"
    >
      <div
        className="header blue white-text center"
      >
        <div
          className="card-content"
        >
          <i
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            아이디찾기
          </i>
          /
          <i
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            비밀번호찾기
          </i>
        </div>
      </div>
      <div>
        g1
        <Link
          replace={false}
          to="/login"
        >
          로그인하러 가기
        </Link>
      </div>
    </div>
  </div>
</div>
`;
